--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   # Entity 1: ZK Proof Generation Service
@@ -8,10 +8,13 @@ services:
       dockerfile: Dockerfile
     container_name: zkproof-service
     ports:
-      - "8001:8001"
+      - "${ZK_SERVICE_PORT:-8001}:${ZK_SERVICE_PORT:-8001}"
     environment:
-      - RUST_LOG=info
-      - RISC0_DEV_MODE=0
+      - RUST_LOG=${RUST_LOG:-info}
+      - RISC0_DEV_MODE=${RISC0_DEV_MODE:-0}
+      - ZK_PROOF_CACHE_TTL=${ZK_PROOF_CACHE_TTL:-3600}
+      - DATABASE_URL=${DATABASE_URL}
+      - REDIS_URL=${REDIS_URL}
     volumes:
       - ./data:/app/data
     networks:
@@ -32,11 +35,17 @@ services:
       dockerfile: Dockerfile
     container_name: llm-advisor
     ports:
-      - "8002:8002"
+      - "${LLM_SERVICE_PORT:-8002}:${LLM_SERVICE_PORT:-8002}"
     environment:
-      - MODEL_PATH=/app/models
-      - ZKPROOF_SERVICE_URL=http://zkproof-service:8001
-      - CUDA_VISIBLE_DEVICES=0
+      - MODEL_PATH=${MODEL_PATH:-/app/models}
+      - ZKPROOF_SERVICE_URL=${ZKPROOF_SERVICE_URL:-http://zkproof-service:8001}
+      - CUDA_VISIBLE_DEVICES=${CUDA_VISIBLE_DEVICES:-0}
+      - MODEL_NAME=${MODEL_NAME:-llama-2-7b-chat}
+      - MODEL_TEMPERATURE=${MODEL_TEMPERATURE:-0.7}
+      - DATABASE_URL=${DATABASE_URL}
+      - REDIS_URL=${REDIS_URL}
+      - JWT_SECRET=${JWT_SECRET}
+      - LOG_LEVEL=${LOG_LEVEL:-info}
     volumes:
       - ./models:/app/models
       - ./data:/app/data
@@ -60,10 +69,11 @@ services:
       dockerfile: Dockerfile
     container_name: web-interface
     ports:
-      - "3000:3000"
+      - "${WEB_PORT:-3000}:3000"
     environment:
-      - REACT_APP_LLM_SERVICE_URL=http://localhost:8002
-      - REACT_APP_ZK_SERVICE_URL=http://localhost:8001
+      - REACT_APP_LLM_SERVICE_URL=${REACT_APP_LLM_SERVICE_URL:-http://localhost:8002}
+      - REACT_APP_ZK_SERVICE_URL=${REACT_APP_ZK_SERVICE_URL:-http://localhost:8001}
+      - REACT_APP_API_TIMEOUT=${REACT_APP_API_TIMEOUT:-30000}
     depends_on:
       - llm-advisor
       - zkproof-service
@@ -75,7 +85,8 @@ services:
     image: redis:7-alpine
     container_name: redis-cache
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT:-6379}:6379"
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     volumes:
       - redis-data:/data
     networks:
@@ -86,11 +97,11 @@ services:
     image: postgres:15
     container_name: postgres-db
     environment:
-      - POSTGRES_DB=zkp_llm
-      - POSTGRES_USER=zkp_user
-      - POSTGRES_PASSWORD=zkp_secure_password
+      - POSTGRES_DB=${POSTGRES_DB:-zkp_llm}
+      - POSTGRES_USER=${POSTGRES_USER:-zkp_user}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT:-5432}:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
